[package]
name = "flash"
version = "0.1.3"
edition = "2024"

[dependencies]
notify = "8.1.0"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = {version = "0.12.22", features = ["multipart"]}
tokio = {version = "1.46.1", features = ["full"]}
